@@ -1,3 +1,6 @@
+2003-08-16  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/gramps_main.py: Functional history submenu of the Go menu.
+
 2003-08-16  Don Allingham  <dallingham@users.sourceforge.net>
 	* configure.in: removal of intl.c/intl22.so
 	* src/gramps.py: handling of i18n without the use of intl
